--- a/projects/mcontr_dev/index.html
+++ b/projects/mcontr_dev/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/desktop-blue.svg" />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <!-- <link rel="stylesheet" href="./styles/styles.css" /> -->
     <title>MyPy</title>
   </head>
   <body class="my-body">
