--- a/projects/mcontr_dev/index.html
+++ b/projects/mcontr_dev/index.html
@@ -2,9 +2,9 @@
 <html lang="en"> 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/desktop-blue.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <!-- <link rel="stylesheet" href="./styles/styles.css" /> -->
-    <title>MyPy</title>
+    <title>mcontr</title>
   </head>
   <body class="my-body">
     <div id="root" class="my-roboto-mono">
